--- a/EIndOpdrachtWeb4/RestaurantDL/RestaurantDL.csproj
+++ b/EIndOpdrachtWeb4/RestaurantDL/RestaurantDL.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Gebruiker\RestaurantBL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
